fix: remove logo displaying on mobile screen size

--- a/src/less/_store.less
+++ b/src/less/_store.less
@@ -227,6 +227,12 @@
   }
 }
 
+@media only screen and (max-width: 500px) {
+  .desktop-logo-large {
+    display: none;
+  }
+}
+
 @media only screen and (min-width: 768px) {
   #create-store {
     display: flex;
